--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -33,7 +33,7 @@
     margin-top: 78px;
     input,
     select{
-      height: 40px;
+      // height: 40px;
       padding: 0 12px;
     }
     textarea{
